Bug fixes on left and right image alignment

--- a/wp-content/themes/bl-2017/css/master.css
+++ b/wp-content/themes/bl-2017/css/master.css
@@ -248,7 +248,16 @@ footer {
     font-size: 1.4em;
     text-shadow: 0.2em 0.2em 1em #000000;
   }
-
+  .post-content .alignleft {
+    float: left;
+    padding: 1em 1em 1em 0;
+    max-width: 45%;
+  }
+  .post-content .alignright {
+    float: right;
+    padding: 1em 0 1em 1em;
+    max-width: 45%;
+  }
 
   .post-body {
     display: flex;
